Bug 329247 - Indenting a selection that starts or ends in leading whitespace changes the selection
Summary: Indenting a selection that starts or ends in leading whitespace changes the s...
Status: RESOLVED FIXED
Alias: None
Product: frameworks-ktexteditor
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-12-26 13:59 UTC by Ivan Yosifov
Modified: 2023-10-31 15:30 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.112
Sentry Crash Report:


Attachments
selection anchors in text, 0 tabs (37.79 KB, image/png)
2013-12-26 14:00 UTC, Ivan Yosifov
Details
selection anchors in text, 1 tab (37.93 KB, image/png)
2013-12-26 14:00 UTC, Ivan Yosifov
Details
selection anchors in text, 2 tabs (38.00 KB, image/png)
2013-12-26 14:01 UTC, Ivan Yosifov
Details
selection anchors in leading whitespace, 0 tabs (37.85 KB, image/png)
2013-12-26 14:01 UTC, Ivan Yosifov
Details
selection anchors in leading whitespace, 1 tab (37.86 KB, image/png)
2013-12-26 14:01 UTC, Ivan Yosifov
Details
selection anchors in leading whitespace, 2 tabs (37.85 KB, image/png)
2013-12-26 14:02 UTC, Ivan Yosifov
Details
Proposed fix (702 bytes, patch)
2014-03-06 11:22 UTC, Ivan Yosifov
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ivan Yosifov 2013-12-26 13:59:18 UTC
The attached images show two kinds of selections and the result of indenting them once and twice with tab. 
For the selection that starts and ends in text, the involved lines are indented and the selected text stays the same (selection start and end positions are adjusted with the indent). This is predictable and convenient. 
For the selection that starts or ends in leading whitespace, after one tab the involved lines are indented but the selection is changed. Further indents do not affect the last line which has been shifted once. This behaviour is awkward, when selecting a block of code to indent, one must make sure to start AND end the selection in text, otherwise the last line is affected inconsistently. Eg. in Python code this is very significant.

Reproducible: Always




KDE version is 4.12.0, Kate version is 3.12.0, Kate Part version is 3.7. The issue is always reproducible with both kwrite and kate. Old bug https://bugs.kde.org/show_bug.cgi?id=279910 sounds vaguely similar.
Comment 1 Ivan Yosifov 2013-12-26 14:00:25 UTC
Created attachment 84272 [details]
selection anchors in text, 0 tabs
Comment 2 Ivan Yosifov 2013-12-26 14:00:45 UTC
Created attachment 84273 [details]
selection anchors in text, 1 tab
Comment 3 Ivan Yosifov 2013-12-26 14:01:03 UTC
Created attachment 84274 [details]
selection anchors in text, 2 tabs
Comment 4 Ivan Yosifov 2013-12-26 14:01:25 UTC
Created attachment 84275 [details]
selection anchors in leading whitespace, 0 tabs
Comment 5 Ivan Yosifov 2013-12-26 14:01:43 UTC
Created attachment 84276 [details]
selection anchors in leading whitespace, 1 tab
Comment 6 Ivan Yosifov 2013-12-26 14:02:14 UTC
Created attachment 84277 [details]
selection anchors in leading whitespace, 2 tabs
Comment 7 Ivan Yosifov 2014-03-06 11:22:03 UTC
Created attachment 85443 [details]
Proposed fix

This patch fixes the bug for me. When the selection end is in leading whitespace, it moves to the end of the leading whitespace and not the beginning of the line. For this bug both insertBehavior == ExpandRight and ExpandLeft | ExpandRight work fine, but the second is used, to not regress https://bugs.kde.org/show_bug.cgi?id=279910 .
Comment 8 Ivan Yosifov 2016-05-26 15:56:23 UTC
HELLO !?
Comment 9 Christoph Cullmann 2016-09-08 16:06:37 UTC
Hi, sorry we didn't take a look earlier, thought I am not sure if that change would not cause other regressions.
Comment 10 remi 2023-10-26 08:07:17 UTC
I have been able to reproduce this bug in a unit test.

If I can, I'll propose a fix that only involves the indent/unindent part of the code.
Comment 11 Bug Janitor Service 2023-10-27 18:35:32 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/ktexteditor/-/merge_requests/623
Comment 12 Christoph Cullmann 2023-10-31 15:30:40 UTC
Git commit 02d2aa2984a54fb63b586448b8d859a514ad285b by Christoph Cullmann, on behalf of Rémi Peuchot.
Committed on 31/10/2023 at 16:30.
Pushed by cullmann into branch 'kf5'.

Fix selection shrink when indenting

'editRemoveText' indirectly triggers 'TextRange::checkValidity'
which silently shrink the selection if the removed text is at the start
or end of the given range.

'editInsertText' will insert text without expanding the selection.

The fix consists of doing insertion before deletion so that the
selection is not shrinked.

(more details in the Merge Request)
FIXED-IN:5.112


(cherry picked from commit 00f218cdf0adce8b0e0b96fd0107803946848e07)

M  +5    -2    src/utils/kateautoindent.cpp

https://invent.kde.org/frameworks/ktexteditor/-/commit/02d2aa2984a54fb63b586448b8d859a514ad285b